  - This new feature is enabled by default and can be disabled by navigating 
  	to File --> New Session Properties --> Tab SQL --> Show SQL execution errors in result tab.
  - Along with this feature comes a new Message Panel right mouse menu "Save size 0" that allows
    to hide the Message panel at application start up.

Bug-fixes:


Patch #3401315 (Derby Object tree trigger).  Trigger source was not being displayed because the  
SYS.SYSTRIGGERS.REFERENCINGOLD and SYS.SYSTRIGGERS.REFERENCINGNEW columns no longer accept 1 and 0 as values 
for comparison.  Now an actual boolean data type is used. (Thanks to Jesus Marin for the patch)

3139446 fixed squirrelsql.bat: % was missing at the end of line set IZPACK_JAVA=%JAVA_HOME

3308469, 3209074, 2983094: SQL with aliases don't result always with aliases as column headings
  Affected modules: 
  - Export as CSV/XLS/XML
  - Copy with headers
  - Copy as HTML

Fixed some memory issues with closed sessions. 

3393589: Introduced performance warning for the global preference " Save Preferences Immediately" when
multiple statements are executed and set the property's default value to false.

2985845: Create table script generates incorrect foreign key stmt: Foreign key columns were used as primary key columns.

If the global setting "General => Save preferences immediately" is enabled, the SQLHistory will be saved immediately after the execution of a statement.  

The column numbers of the header columns are now correct, when exporting the result table as XML.

When displaying the content of a table, the dialog "Please wait while the query is executed" may not dispose.
  This may occurs only for tables of a "In Memory Database" with only a few rows of data. 

When editing table cells in a text area, the input field for the file name will be shown in an appropriate size 
  instead of being very small. If the user change the size of the dialog, the input field for the file name will use the extra space.
